--- a/menustyles.css
+++ b/menustyles.css
@@ -24,7 +24,9 @@ svg {
 }
 .image-container {
   width: 100%;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   max-width: 100%;
   height: auto;
 }
