--- a/aboutus.css
+++ b/aboutus.css
@@ -13,34 +13,26 @@
   align-items: center;
 }
 
-.col-lg-6 h2 {
-  margin-top: -40px;
-  text-align: center;
-  font-family: 'Hind', sans-serif;
-  color: white;
-}
-
 .col-lg-6 img {
   max-width: 100%;
-  height: auto; 
-  max-height: 100vh; 
-  padding-top: 20px;
-  padding-left: 10px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 30px;
   padding-right: 0px;
-  margin-top: 90px;
   align-items: center;
+  align-self: center;
 }
 
 .col-lg-6 h2 {
-  margin-top: -30px;
+  margin-top: -70px;
   text-align: center;
   font-family: 'Hind', sans-serif;
   color: white;
 }
 
 .col-lg-6 p {
-  margin-top: -20px;
   text-align: center;
+  margin-top: -20px;
   margin-left: 50px;
   margin-right: 50px;
   font-family: 'Hind', sans-serif;
@@ -67,50 +59,38 @@
   background-color: white;
   border-radius: 5px;
   padding: 5px 10px;
+  padding-bottom: 10px;
   margin-top: 10px;
   margin-bottom: 20px;
 }
 
-
 @media (max-width: 991px) {
   .container {
-    padding-right: 30px;
+    padding-right: 50px;
     padding-bottom: 20px;
-  }
-  
-  .col-lg-6 h2,
-  .col-lg-6 p {
-    text-align: center; 
-    margin-left: 40px; 
-    margin-right: 40px;
-  }
-  
-  .custom-image{
-	padding-top: 0px;
-	margin: 0px;
-  }
-	
-  .custom-image,
-  .custom-button {
-    margin-left: 0; 
-    text-align: center; 
-  }
-  
-  .custom-button {
-    margin-top: 20px; 
-  }
-}
-
-@media (max-width: 767px){
-	.container{
-		padding: 10px;
+	  padding-top: 30px;
 	}
+	
+  .col-lg-6 h2 p {
+	align-items:center;
+	display: flex;
+    flex-direction: column;
+	}
+	
+	.custom-image .custom-button {
+	margin-left: 40px;
+	align-items:center;
+	}
+	
 	.col-lg-6 img {
-		padding: 10px;
+	padding-right: 30px;
+    padding-top: 30px;
 	}
-	
-	.custom-image{
-		padding: 0px;
-		margin: -50px;
+	}
+
+@media (max-width: 767px) {
+	.col-lg-6 img {
+	padding: 10px;
 	}
 }
+	
