--- a/shopstyles.css
+++ b/shopstyles.css
@@ -6,34 +6,29 @@
   margin: 0;
   box-sizing: border-box;
 }
-svg {
-  position: absolute;
-}
+
 .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   max-width: 100%;
   height: 50vh;
   overflow: hidden;
   background-color: #883E24;
 }
+
 .image-container {
-  width: 100%;
-  text-align: center;
-}
-.custom-image {
-  display: block;
   max-width: 100%;
   height: auto;
-  margin: 0 auto;
 }
 
-/* Desktop Type*/
+
 @media (min-width: 768px) {
-  .custom-image {
+  .image-container {
     max-width: 50%;
   }
 }
 
-/* Moble Container */
 @media (max-width: 767px) {
   .wrapper {
     height: 35vh;
