--- a/contactstyles.css
+++ b/contactstyles.css
@@ -1,30 +1,19 @@
 @charset "utf-8";
 
-/*Contact Form*/
-.form-group {
-  margin-bottom: 20px;
-	font-family: 'Hind', sans-serif;
-	color: white;
+/*Content for Body*/
+.container {
+  margin-top: 20px;
+  background-color: #883E24;
+  padding: 0px;
 }
 
-label {
-  display: block;
-  margin-bottom: 5px;
+form {
+  font-family: 'Hind', sans-serif;
+  color: white;
 }
 
-input,
-textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-}
-
-button[type="submit"] {
-  display: block;
-  margin-top: 10px;
-  padding: 5px 10px;
-  background-color: #555;
-  color: #fff;
-  border: none;
-  cursor: pointer;
+#success-message {
+  font-family: 'Hind', sans-serif;
+  color: white;
+  font-size: 22px; 
 }
