--- a/contactstyles.css
+++ b/contactstyles.css
@@ -12,6 +12,10 @@ form {
   color: white;
 }
 
+iframe {
+  border: none;
+}
+
 #success-message {
   font-family: 'Hind', sans-serif;
   color: white;
